final updates to ERL 3